--- a/templates/accounts/skill_or_service.html
+++ b/templates/accounts/skill_or_service.html
@@ -72,10 +72,10 @@
         <div class="col-lg-10 mx-auto">
             <form action="#" method="POST" enctype="multipart/form-data">
                 <div class="login-form">
-                    <h4 class="login-title">Add Skill</h4>
+                    <h4 class="login-title">Add Data</h4>
                     <div class="row">
                         <fieldset class="form-group">
-                            {% csrf_token %} {{form|crispy }}
+                            {% csrf_token %} {{form|crispy }}{{form.media}}
                         </fieldset>
                         <div class="col-sm-4">
                             <button class="btn btn-outline-white-primary" type='submit'>Add</button>
