--- a/templates/base.html
+++ b/templates/base.html
@@ -101,7 +101,7 @@
                             <div aria-labelledby="clientZone" class="dropdown-menu">
                                 <!-- <a href="{% url 'accounts:employer-profile-update' %}" class="dropdown-item">Profile</a> -->
                                 <a href="{% url 'jobs:applied-jobs' %}" class="dropdown-item">Applied Jobs</a>
-                                <a href="{% url 'accounts:my-profile' %}" class="dropdown-item">My Profile</a>
+                                <a href="{% url 'accounts:my-profile' %}" class="dropdown-item">Profile</a>
                                 <a href="{% url 'accounts:logout' %}" class="dropdown-item">Logout</a>
                             </div>
                         </li>
@@ -173,7 +173,7 @@
         <div class="footer-left" style="text-align: center;">
             <h3>{{settings.siteTitle}}</h3>
             <p class="footer-links">
-                <a href="#">Home</a> ·
+                <a href="{% url 'jobs:home' %}">Home</a> ·
                 <a href="#">Blog</a> ·
                 <a href="{% url 'SiteSettings:about' %}" class="nav-link">About</a> .
                 <a href="{% url 'SiteSettings:contact' %}">Contact</a>
