--- a/templates/accounts/user_profile.html
+++ b/templates/accounts/user_profile.html
@@ -3,6 +3,10 @@
 <style>
     /* card css */
     
+    ul {
+        margin-left: -20px !important;
+    }
+    
     a {
         color: #007bff;
     }
@@ -252,12 +256,13 @@
                 <div class="profile-content">
                     <ul style="list-style: none;">
                         <li><i class="fa fa-envelope"></i> {{user.email}}</li>
-                        <li><i class="fa fa-globe"></i><a href="{{ user.userprofile.website }}" target="_blank"> {{user.userprofile.website}}</a></li>
 
                         {% if user.role == 'employer' %}
                         <li><i class="fa fa-user"></i> No. Of. Employees: {{user.userprofile.employee_no}}</li>
                         <li><i class="fa fa-building"></i> Industry Type: {{user.userprofile.industry_type}}</li>
+                        <li><i class="fa fa-map-marker"></i> Address: {{user.userprofile.address}}</li>
                         {% endif %}
+                        <li><i class="fa fa-globe"></i><a href="{{ user.userprofile.website }}" target="_blank"> {{user.userprofile.website}}</a></li>
                     </ul>
                 </div>
                 {% if user.role == 'employer' %}
