--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,7 @@
                             <a href="{% url 'jobs:companies' %}" class="nav-link">Companies</a>
                         </li>
                         <li class="nav-item">
-                            <a href="#" class="nav-link">Blog</a>
+                            <a href="{% url 'blog:blog-list' %}" class="nav-link">Blog</a>
                         </li>
                         {% if request.user.is_authenticated and request.user.role == 'employer' %}
                         <li class="nav-item dropdown">
