--- a/templates/blogs/blog-details.html
+++ b/templates/blogs/blog-details.html
@@ -13,53 +13,40 @@
 <!-- Block Body -->
 {% block content %}
 
-<div id="fh5co-title-box" style="background-image: url(images/camila-cordeiro-114636.jpg); background-position: 50% 90.5px;" data-stellar-background-ratio="0.5">
+<!-- <div style="background-image: url(blog.image.url); background-position: 50% 590.5px;" data-stellar-background-ratio="0.5">
     <div class="overlay"></div>
     <div class="page-title">
-        <img src="images/person_1.jpg" alt="Free HTML5 by FreeHTMl5.co">
+        <img src="{{blog.image.url}}" alt="Free HTML5 by FreeHTMl5.co">
         <span>January 1, 2018</span>
         <h2>How to write interesting articles</h2>
     </div>
+</div> -->
+
+
+<div class="col-md-12 animate-box page-title">
+    <img src="{{blog.image.url}}" style="height:700px; width:60%; margin-left: auto !important; margin-right: auto !important; display: block; margin-bottom: 1em;" alt="Free HTML5 by FreeHTMl5.co">
+    <div class="col-md-12" style="text-align: center !important; color:rgb(0, 61, 140)">
+
+        <h2 style="font-weight: bolder;">{{blog.title}}</h2>
+        <i class="fa fa-clock-o"></i><span> {{blog.created_at|date}}</span>
+    </div>
+
 </div>
+
 <div id="fh5co-single-content" class="container-fluid pb-4 pt-4 paddding">
+
     <div class="container paddding">
         <div class="row mx-0">
             <div class="col-md-12 animate-box" data-animate-effect="fadeInLeft">
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla malesuada enim id enim congue convallis. Praesent a cursus orci. Proin mauris eros, rhoncus in risus nec, vestibulum dignissim diam. Duis dapibus, magna ac fringilla consectetur, tellus quam
-                    aliquam quam, molestie tincidunt justo risus et nunc. Donec quis justo nec diam hendrerit facilisis placerat non magna. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-                </p>
-                <p>
-                    Nulla tincidunt sit amet ligula interdum pulvinar. Sed nec volutpat enim. Praesent pretium ullamcorper quam, at rhoncus magna consectetur quis. Nulla condimentum, libero vel varius sodales, lacus urna accumsan purus, at mattis nisi nibh in lorem. Sed
-                    laoreet, ante vitae tincidunt auctor, sapien metus tincidunt ante, quis aliquam lacus risus id quam.
-                </p>
-                <h3>Free HTML5 Templates</h3>
-                <p>
-                    Nam vehicula viverra quam, nec ornare ex convallis eget. Praesent pulvinar, justo at lacinia elementum, dolor elit facilisis massa, vel feugiat elit massa et libero. Praesent hendrerit metus eu elementum commodo. Morbi tempus mi a nulla scelerisque, vitae
-                    vulputate nisi commodo. Maecenas felis urna, dictum quis mollis quis, mollis vel ligula. Nullam sodales sapien tellus, ornare tincidunt dolor imperdiet at. Vestibulum convallis, felis quis condimentum finibus, justo lectus aliquam
-                    libero, eu lacinia tellus leo eu orci.
-                </p>
-                <ul>
-                    <li>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, modi!</li>
-                    <li>Ea iure at, debitis culpa perspiciatis suscipit laudantium a, expedita.</li>
-                    <li>Voluptate distinctio perspiciatis cum sed ipsum nisi accusantium a aut!</li>
-                    <li>Sed vel quo dignissimos, quaerat totam officia, deserunt provident minus.</li>
-                </ul>
-                <p>
-                    Maecenas consequat dictum aliquam. Praesent nec magna at ipsum facilisis dictum sit amet nec arcu. Donec ac metus a elit rhoncus euismod et sit amet velit. Nunc quis lacus vel metus tincidunt vulputate in et libero. Aliquam dolor lacus, facilisis ultrices
-                    rutrum in, blandit vitae nulla. Nullam vestibulum, odio vitae aliquam aliquam, nibh dui iaculis augue, ut tristique nisi est in tellus. Fusce volutpat ultricies venenatis. In a arcu in tellus tincidunt accumsan. Nulla pretium at ex
-                    viverra vulputate. Cras mollis velit metus, non suscipit felis luctus sit amet. Ut vel leo vitae magna blandit tempor in sit amet arcu. Donec dignissim mattis dui. Donec ultrices malesuada sapien, ut fermentum nisi efficitur eu. Phasellus
-                    dui eros, posuere vel lacus vitae, venenatis feugiat libero. Nunc sed nisi feugiat, consequat arcu id, vehicula augue. Donec viverra tincidunt nisi eget ornare.
-                </p>
+                {{blog.description|safe}}
             </div>
         </div>
     </div>
 </div>
-
 <div class="container-fluid pb-4 pt-5">
     <div class="container animate-box">
         <div>
-            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Featured</div>
+            <div class="fh5co_heading fh5co_heading_border_bottom py-2 mb-4">Related</div>
         </div>
         <div class="owl-carousel owl-theme" id="slider2">
             {% for blog in featured %}
@@ -67,7 +54,7 @@
                 <div class="fh5co_hover_news_img">
                     <div class="fh5co_news_img"><img src="{{blog.image.url}}" alt="" /></div>
                     <div>
-                        <a href="#" class="d-block fh5co_small_post_heading"><span class="">{{blog.title}}</span></a>
+                        <a href="{% url 'blog:blog-detail' blog.id %}" class="d-block fh5co_small_post_heading"><span class="">{{blog.title}}</span></a>
                         <div class="c_g"><i class="fa fa-clock-o"></i> {{blog.created_at|date}}</div>
                     </div>
                 </div>
@@ -76,6 +63,7 @@
         </div>
     </div>
 </div>
+
 <div class="gototop js-top">
     <a href="#" class="js-gotop"><i class="fa fa-arrow-up"></i></a>
 </div>
