--- a/templates/blogs/blog-details.html
+++ b/templates/blogs/blog-details.html
@@ -1,13 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block title %} Blog {% endblock %} {% block styles %}
-<link href="{% static 'blog/css/media_query.css' %}" rel="stylesheet" type="text/css" />
-<link href="{% static 'blog/css/bootstrap.css' %}" rel="stylesheet" type="text/css" />
-<link href="{% static 'blog/css/animate.css' %}" rel="stylesheet" type="text/css" />
-<link href="{% static 'blog/css/owl.carousel.css' %}" rel="stylesheet" type="text/css" />
-<link href="{% static 'blog/css/owl.theme.default.css' %}" rel="stylesheet" type="text/css" />
-<link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
-<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
-<!-- Bootstrap CSS -->
-<link href="{% static 'blog/css/style_1.css' %}" rel="stylesheet" type="text/css" /> {% endblock %}
+{% extends 'base.html' %} {% load static %} {% block title %} Blog {% endblock %} {% block styles %} {% endblock %}
 
 
 <!-- Block Body -->
