background task, pagination in dashboard solve

--- a/templates/blogs/blog-details.html
+++ b/templates/blogs/blog-details.html
@@ -15,10 +15,10 @@
 
 
 <div class="col-md-12 animate-box page-title">
-    <img src="{{blog.image.url}}" style="height:700px; width:60%; margin-left: auto !important; margin-right: auto !important; display: block; margin-bottom: 1em;" alt="Free HTML5 by FreeHTMl5.co">
-    <div class="col-md-12" style="text-align: center !important; color:rgb(0, 61, 140)">
+    <img src="{{blog.image.url}}" style="height:500px; width:55%; margin-left: auto !important; margin-right: auto !important; display: block; margin-bottom: 1em;" alt="Free HTML5 by FreeHTMl5.co">
+    <div class="col-md-8 animate-box page-title" style="text-align: center !important;  margin-left: auto !important; margin-right: auto !important; display: block; color:rgb(0, 61, 140)">
 
-        <h2 style="font-weight: bolder;">{{blog.title}}</h2>
+        <h2 style="font-weight: bolder;box-sizing: border-box;">{{blog.title}}</h2>
         <i class="fa fa-clock-o"></i><span> {{blog.created_at|date}}</span>
     </div>
 
