--- a/templates/jobs/jobcreate.html
+++ b/templates/jobs/jobcreate.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}{% load crispy_forms_tags %}
 <!-- static load -->
-{% load static %} {% block title %} {{ title }} {% endblock %} {% block styles %}
+{% load static %} {% block title %} Post New Job {{ title }} {% endblock %} {% block styles %}
 <link rel="stylesheet" href="{% static 'vendor/bootstrap-select/css/bootstrap-select.min.css' %}">
 <style>
     /* CUSTOMIZED BY ME */
